--- a/app/Resources/views/donotsend/new.html.twig
+++ b/app/Resources/views/donotsend/new.html.twig
@@ -1,7 +1,7 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Assign Employee as Do Not Send</h1>
+    <h1>Mark an Employee as Do Not Send</h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
