--- a/app/Resources/views/employeeabsence/edit.html.twig
+++ b/app/Resources/views/employeeabsence/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Employeeabsence edit</h1>
+    <h1>Edit an Employee Absence</h1>
 
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
