--- a/app/Resources/views/employeeunavailability/new.html.twig
+++ b/app/Resources/views/employeeunavailability/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     {{ dump() }}
-    <h1>Employee Unavailability Time Creation</h1>
+    <h1>Create an Employee Unavailability Time </h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
