--- a/app/Resources/views/serviceuserassignedemployee/new.html.twig
+++ b/app/Resources/views/serviceuserassignedemployee/new.html.twig
@@ -1,7 +1,7 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Serviceuserassignedemployee creation</h1>
+    <h1>Assign an employee to this Service user</h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
