--- a/app/Resources/views/employeeabsence/new.html.twig
+++ b/app/Resources/views/employeeabsence/new.html.twig
@@ -1,7 +1,7 @@
 {% extends '_base.html.twig' %}
 
 {% block body %}
-    <h1>Employeeabsence creation</h1>
+    <h1>Create an Employee Absence </h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
