--- a/app/Resources/views/employeeunavailability/edit.html.twig
+++ b/app/Resources/views/employeeunavailability/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h1>Unavailability Times Update Page</h1>
+    <h1>Employee Unavailability Update Page</h1>
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
     <input type="submit" value="Submit Changes" class="btn btn-success btn-sm" role="button"/>
