--- a/app/Resources/views/roster/index.html.twig
+++ b/app/Resources/views/roster/index.html.twig
@@ -39,8 +39,17 @@
                 <td>{{ roster.serviceUserId }}</td>
                 <td>{% if roster.rosterStartTime %}{{ roster.rosterStartTime|date('D d-m-y H:i:s') }}{% endif %}</td>
                 <td>{% if roster.rosterEndTime %}{{ roster.rosterEndTime|date('D d-m-y H:i:s') }}{% endif %}</td>
-                <td>{{ roster.rosterEndTime.diff(roster.rosterStartTime )|date("%H:%i ") }}</td>
-
+                <td>
+                    {% if roster.rosterEndTime.diff(roster.rosterStartTime )|date("%i")==0 %}
+                        {{ roster.rosterEndTime.diff(roster.rosterStartTime )|date("%H:") }}00
+                    {% elseif (roster.rosterEndTime.diff(roster.rosterStartTime )|date("%i")<10)
+                    and (roster.rosterEndTime.diff(roster.rosterStartTime )|date("%i")>0) %}
+                        {{ roster.rosterEndTime.diff(roster.rosterStartTime )|date("%H:") }}0
+                        {{ roster.rosterEndTime.diff(roster.rosterStartTime )|date("%i") }}
+                    {% else %}
+                        {{ roster.rosterEndTime.diff(roster.rosterStartTime )|date("%H:%i") }}
+                    {% endif %}
+                </td>
                 <td>{{ roster.rosterStatus }}</td>
                 <td>{{ roster.numberResourcesNeeded }}</td>
                 <td>{{ roster.customerId }}</td>
